2004-03-30  Adam Weinberger  <adamw@gnome.org>

	* configure.in: Added en_CA to ALL_LINGUAS.

2004-03-29  Ross Burton  <ross@burtonini.com>

	* configure.in:
	Look for GStreamer 0.8 before trying 0.7 and 0.6.

2004-03-29  Ross Burton  <ross@burtonini.com>

	* src/sj-main.c:
	Add a mnemonic to the "broken encoder" dialog, and fix the closing
	logic.
	
2004-03-29  Ross Burton  <ross@burtonini.com>

	* README:
	Updated, and added a FAQ.

2004-03-23  Maxim Dziumanenko <mvd@mylinux.com.ua>

	* configure.in:  Added "uk" (Ukrainian) to ALL_LINGUAS

2003-03-21  Gareth Owen  <gowen72@yahoo.com>

	* configure.in:  Added en_GB to ALL_LINGUAS

2003-03-21  Evandro Fernandes Giovanini  <evandrofg@ig.com.br>
   
        * configure.in(ALL_LINGUAS): Added "pt_BR" (Brazilian Portuguese).

2004-03-15  Ross Burton  <ross@burtonini.com>

	* data/sound-juicer.glade:
	Use Control-Return as the menu shortcut for Extract.

2004-03-12  Paisa Seeluangsawat  <paisa@users.sf.net>

	* configure.in: Added "th" (Thai) to ALL_LINGUAS.

2004-03-07  Tommi Vainikainen <thv@iki.fi>

	* configure.in: Added "fi" (Finnish) to ALL_LINGUAS.

2004-03-02  Žygimantas Beručka  <uid0@akl.lt>

	* configure.in: Added "lt" (Lithuanian) to ALL_LINGUAS.

2004-02-25  Ross Burton  <ross@burtonini.com>

	* src/sj-about.c:
	Use "translator-credits" instead of "translator_credits" at the
	request of the i18n team.

2004-02-25  Ross Burton  <ross@burtonini.com>

	* src/sj-main.c:
	Read the value of the eject on complete preference at startup.

2004-02-05  Ross Burton  <ross@burtonini.com>

	* configure.in:
	* NEWS:
	Release 0.5.10.1.

2004-02-05  Ross Burton  <ross@burtonini.com>

	* configure.in:
	* NEWS:
	Release 0.5.10.

2004-01-21  Ross Burton  <ross@burtonini.com>

	* src/Makefile.am:
	Dammit, I was using automake 1.8 features and this must work with
	1.6.

2004-01-21  Ross Burton  <ross@burtonini.com>

	* configure.in:
	Cleanup and add more comments.

	* src/Makefile.am: 
	Ditto.
