@@ -23,7 +23,9 @@
    Bastien Nocera <hadess@hadess.net>
 */
 
+#ifdef HAVE_CONFIG_H
 #include "config.h"
+#endif
 
 #include <errno.h>
 #include <stdio.h>
@@ -35,6 +37,10 @@
 #include <unistd.h>
 #include <fcntl.h>
 #include <math.h>
+
+#ifdef USE_HAL
+#include <libhal.h>
+#endif /* USE_HAL */
 
 #ifdef __linux__
 #include <scsi/scsi.h>
@@ -48,7 +54,19 @@
 #endif /* __FreeBSD__ */
 
 #include <glib.h>
-#include <libgnome/gnome-i18n.h>
+
+#ifdef ENABLE_NLS
+#include <libintl.h>
+#define _(String) dgettext(GETTEXT_PACKAGE,String)
+#ifdef gettext_noop
+#define N_(String) gettext_noop(String)
+#else
+#define N_(String) (String)
+#endif /* gettext_noop */
+#else
+#define _(String) (String)
+#define N_(String) (String)
+#endif /* ENABLE_NLS */
 
 #include "cd-drive.h"
 
@@ -62,11 +80,158 @@ static struct {
 	{ "IOMEGA - CDRW9602EXT-B", TRUE, TRUE, FALSE, FALSE },
 };
 
+#ifdef USE_HAL
+
+static void
+hal_scan_add_whitelist (CDDrive *cdrom)
+{
+	guint i;
+
+	for (i = 0; i < G_N_ELEMENTS (recorder_whitelist); i++) {
+		if (!strcmp (cdrom->display_name, recorder_whitelist[i].name)) {
+			if (recorder_whitelist[i].can_write_cdr) {
+				cdrom->type |= CDDRIVE_TYPE_CD_RECORDER;
+			}
+			if (recorder_whitelist[i].can_write_cdrw) {
+				cdrom->type |= CDDRIVE_TYPE_CDRW_RECORDER;
+			}
+			if (recorder_whitelist[i].can_write_dvdr) {
+				cdrom->type |= CDDRIVE_TYPE_DVD_RW_RECORDER;
+			}
+			if (recorder_whitelist[i].can_write_dvdram) {
+				cdrom->type |= CDDRIVE_TYPE_DVD_RAM_RECORDER;
+			}
+		}
+	}
+}
+
+#define GET_BOOL_PROP(x) (hal_device_property_exists (device_names[i], x) && hal_device_get_property_bool (device_names[i], x))
+#define CD_ROM_SPEED 176
+
+static GList *
+hal_scan (gboolean recorder_only)
+{
+	GList *cdroms = NULL;
+	LibHalFunctions hal_functions = {
+		NULL, /* mainloop integration */
+		NULL, /* device_added */
+		NULL, /* device_removed */
+		NULL, /* device_new_capability */
+		NULL, /* property_modified */
+		NULL, /* device_condition */
+	};
+	int i;
+	int num_devices;
+	char** device_names;
+
+	if (hal_initialize (&hal_functions, FALSE)) {
+		return NULL;
+	}
+
+	device_names = hal_get_all_devices (&num_devices);
+	if (device_names == NULL)
+	{
+		hal_shutdown ();
+		return NULL;
+	}
+
+	for (i = 0; i < num_devices; i++)
+	{
+		CDDrive *cdrom;
+		char *string;
+		gboolean is_cdr;
+
+		/* Is it a removable drive? */
+		if (!GET_BOOL_PROP ("storage.removable")) {
+			continue;
+		}
+
+		/* Is it a CD drive? */
+		string = hal_device_get_property_string (device_names[i],
+				"storage.media");
+		if (string == NULL || strcmp (string, "cdrom") != 0) {
+			g_free (string);
+			continue;
+		}
+		g_free (string);
+
+		/* Is it the CD-drive, or a volume on the media? */
+		if (GET_BOOL_PROP ("block.is_volume") != FALSE) {
+			continue;
+		}
+
+		/* Is it a CD burner? */
+		is_cdr = GET_BOOL_PROP ("storage.cdr");
+		if (recorder_only && is_cdr == FALSE) {
+			continue;
+		}
+
+		cdrom = g_new0 (CDDrive, 1);
+		cdrom->type = CDDRIVE_TYPE_CD_DRIVE;
+		if (is_cdr != FALSE) {
+			cdrom->type |= CDDRIVE_TYPE_CD_RECORDER;
+		}
+		if (GET_BOOL_PROP ("storage.cdrw")) {
+			cdrom->type |= CDDRIVE_TYPE_CDRW_RECORDER;
+		}
+		if (GET_BOOL_PROP ("storage.dvd")) {
+			cdrom->type |= CDDRIVE_TYPE_DVD_DRIVE;
+
+			if (GET_BOOL_PROP ("storage.dvdram")) {
+				cdrom->type |= CDDRIVE_TYPE_DVD_RAM_RECORDER;
+			}
+			if (GET_BOOL_PROP ("storage.dvdr")) {
+				cdrom->type |= CDDRIVE_TYPE_DVD_RW_RECORDER;
+			}
+			if (GET_BOOL_PROP ("storage.dvd")) {
+				cdrom->type |= CDDRIVE_TYPE_DVD_DRIVE;
+			}
+			if (GET_BOOL_PROP ("storage.dvdplusr")) {
+				cdrom->type |= CDDRIVE_TYPE_DVD_PLUS_R_RECORDER;
+			}
+			if (GET_BOOL_PROP ("storage.dvdplusrw")) {
+				cdrom->type |= CDDRIVE_TYPE_DVD_PLUS_RW_RECORDER;
+			}
+		}
+
+		cdrom->device = hal_device_get_property_string (device_names[i],
+				"block.device");
+		cdrom->cdrecord_id = g_strdup (cdrom->device);
+
+		string = hal_device_get_property_string (device_names[i],
+				"storage.model");
+		if (string != NULL) {
+			cdrom->display_name = string;
+		} else {
+			cdrom->display_name = g_strdup_printf ("Unnamed CD-ROM (%s)", cdrom->device);
+		}
+
+		cdrom->max_speed_read = hal_device_get_property_int
+			(device_names[i], "storage.cdrom.read_speed")
+			/ CD_ROM_SPEED;
+
+		if (hal_device_property_exists (device_names[i], "storage.cdrom.write_speed")) {
+			cdrom->max_speed_write = hal_device_get_property_int
+				(device_names[i], "storage.cdrom.write_speed")
+				/ CD_ROM_SPEED;
+		}
+
+		hal_scan_add_whitelist (cdrom);
+
+		cdroms = g_list_prepend (cdroms, cdrom);
+	}
+
+	cdroms = g_list_reverse (cdroms);
+
+	return cdroms;
+}
+#endif /* USE_HAL */
+
 #if defined(__linux__) || defined(__FreeBSD__)
 
 /* For dvd_plus_rw_utils.cpp */
 int get_dvd_r_rw_profile (const char *name);
-int get_mmc_profile (void *fd);
+int get_mmc_profile (int fd);
 
 static void
 add_dvd_plus (CDDrive *cdrom)
@@ -103,7 +268,7 @@ linux_bsd_media_type (const char *device)
 		return CD_MEDIA_TYPE_ERROR;
 	}
 
-	mmc_profile = get_mmc_profile ((void *)&fd);
+	mmc_profile = get_mmc_profile (fd);
 	close (fd);
 
 	switch (mmc_profile) {
@@ -310,17 +475,22 @@ get_cd_scsi_id (const char *dev, int *bus, int *id, int *lun)
 	devfile = g_strdup_printf ("/dev/%s", dev);
 	fd = open(devfile, O_RDONLY | O_NONBLOCK);
 	g_free (devfile);
-	
+
+	/* Avoid problems with Valgrind */
+	memset (&m_idlun, 1, sizeof (m_idlun));
+	*bus = *id = *lun = -1;
+
 	if (fd < 0) {
 		g_warning ("Failed to open cd device %s\n", dev);
 		return 0;
 	}
-    
-	if (ioctl (fd, SCSI_IOCTL_GET_BUS_NUMBER, bus) < 0) {
+
+	if (ioctl (fd, SCSI_IOCTL_GET_BUS_NUMBER, bus) < 0 || *bus < 0) {
 		g_warning ("Failed to get scsi bus nr\n");
 		close (fd);
 		return 0;
 	}
+
 	if (ioctl (fd, SCSI_IOCTL_GET_IDLUN, &m_idlun) < 0) {
 		g_warning ("Failed to get scsi id and lun\n");
 		close(fd);
@@ -328,7 +498,7 @@ get_cd_scsi_id (const char *dev, int *bus, int *id, int *lun)
 	}
 	*id = m_idlun.mux4 & 0xFF;
 	*lun = (m_idlun.mux4 >> 8)  & 0xFF;
-	
+
 	close(fd);
 	return 1;
 }
@@ -366,14 +536,14 @@ get_device_max_speed (char *id)
 	argv[i++] = NULL;
 
 	if (g_spawn_sync (NULL,
-			  (char **)argv,
-			  NULL,
-			  G_SPAWN_SEARCH_PATH | G_SPAWN_STDERR_TO_DEV_NULL,
-			  NULL, NULL,
-			  &stdout_data,
-			  NULL,
-			  NULL,
-			  NULL)) {
+				(char **)argv,
+				NULL,
+				G_SPAWN_SEARCH_PATH | G_SPAWN_STDERR_TO_DEV_NULL,
+				NULL, NULL,
+				&stdout_data,
+				NULL,
+				NULL,
+				NULL)) {
 		speed = strstr (stdout_data, "Maximum write speed in kB/s:");
 		if (speed != NULL) {
 			speed += strlen ("Maximum write speed in kB/s:");
@@ -392,13 +562,12 @@ get_device_max_speed (char *id)
 	return max_speed;
 }
 
-
 static char *
 get_scsi_cd_name (int bus, int id, int lun, const char *dev,
 		  struct scsi_unit *scsi_units, int n_scsi_units)
 {
 	struct scsi_unit *scsi_unit;
-	
+
 	scsi_unit = lookup_scsi_unit (bus, id, lun, scsi_units, n_scsi_units);
 	if (scsi_unit == NULL) {
 		return g_strdup_printf (_("Unnamed SCSI CD-ROM (%s)"), dev);
@@ -637,7 +806,7 @@ linux_scan (gboolean recorder_only)
 			g_strfreev (devices);
 			return NULL;
 		}
-		
+
 		scsi_units = g_new0 (struct scsi_unit, n_scsi_units);
 		get_scsi_units (device_str, devices, scsi_units);
 
@@ -646,7 +815,7 @@ linux_scan (gboolean recorder_only)
 	} else {
 		scsi_units = NULL;
 	}
-	
+
 	for (i = 3; cdrom_info[i] != NULL; i++) {
 		if (g_str_has_prefix (cdrom_info[i], "Can write CD-R:")) {
 			p = cdrom_info[i] + strlen ("Can write CD-R:");
@@ -962,13 +1131,19 @@ scan_for_cdroms (gboolean recorder_only, gboolean add_image)
 	CDDrive *cdrom;
 	GList *cdroms = NULL;
 
+#ifdef USE_HAL
+	cdroms = hal_scan (recorder_only);
+#endif
+
+	if (cdroms == NULL) {
 #ifdef __linux__
-	cdroms = linux_scan (recorder_only);
+		cdroms = linux_scan (recorder_only);
 #endif
 
 #ifdef __FreeBSD__
-	cdroms = freebsd_scan (recorder_only);
+		cdroms = freebsd_scan (recorder_only);
 #endif
+	}
 
 	if (add_image) {
 		/* File */
