@@ -1,3 +1,11 @@
+2004-04-13  Ross Burton  <ross@burtonini.com>
+
+	* src/bacon-cd-selection.c:
+	* src/bacon-cd-selection.h:
+	* src/cd-drive.c:
+	* src/dvd_plus_rw_utils.cpp:
+	Updated.
+
 2004-03-30  Adam Weinberger  <adamw@gnome.org>
 
 	* configure.in: Added en_CA to ALL_LINGUAS.
